# agent-dispatch

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  agents.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agent_dispatch/: __init__.py  cache.py  cli.py  config.py  jobs.py  models.py  runner.py  server.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_jobs.py  test_models.py  test_runner.py  test_server.py
