[project]
name = "agent-dispatch"
version = "0.2.2"
description = "MCP server that lets Claude Code agents delegate tasks to agents in other project directories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ginkida" }]
keywords = ["mcp", "claude", "agent", "dispatch", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
agent-dispatch = "agent_dispatch.cli:cli"

[project.urls]
Homepage = "https://github.com/ginkida/agent-dispatch"
Repository = "https://github.com/ginkida/agent-dispatch"
Issues = "https://github.com/ginkida/agent-dispatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_dispatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
