[project]
name = "agent-dispatch"
version = "0.7.0"
description = "MCP server that lets Claude Code agents delegate tasks to agents in other project directories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ginkida" }]
keywords = [
    "mcp",
    "mcp-server",
    "claude",
    "claude-code",
    "agent",
    "ai-agents",
    "subagents",
    "multi-agent",
    "agent-orchestration",
    "dispatch",
    "delegation",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
agent-dispatch = "agent_dispatch.cli:cli"

[project.urls]
Homepage = "https://github.com/ginkida/agent-dispatch"
Repository = "https://github.com/ginkida/agent-dispatch"
Issues = "https://github.com/ginkida/agent-dispatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_dispatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "B",       # flake8-bugbear (likely bugs)
    "I",       # isort (import order)
    "UP",      # pyupgrade (modern syntax)
    "S",       # flake8-bandit (security)
]
ignore = [
    # The dispatch family shells out to the trusted `claude` CLI with argument
    # lists (never shell=True); see runner._build_command and the arg-injection
    # guard (_reject_flaglike). Partial path is intentional — `claude` is
    # resolved from PATH.
    "S603",  # subprocess call with possibly-untrusted input
    "S607",  # starting a process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately assert and use throwaway /tmp paths.
"tests/**" = ["S101", "S108"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
